--- a/README.org
+++ b/README.org
@@ -37,4 +37,30 @@
    3. Complete the database access tutorial ([[https://go.dev/doc/tutorial/database-access][Database Access]])
    4. Complete the SQLc tutorial ([[https://docs.sqlc.dev/en/latest/tutorials/getting-started-sqlite.html][SQLC Doc]])
    5. Complete the Webservice tutorial using Golang ([[https://go.dev/doc/tutorial/web-service-gin][Go/Gin]])
+*** Week 3 Objectives
+**** Complete Database and Application Integration
+***** Based on the experiences and learning from Weeks 1 and 2
+1. Create a new project (glocalbuzz)
+2. Learn how to use the Gin framework ([[https://gin-gonic.com/en/docs/][Gin Framework]])
+3. Create a sqlc model with the following tables
+   1. USER - (primary_key, email, password, preferred_name, created_at, updated_at)
+   2. ROLE - (primary_key, role_name, role_description, created_at, updated_at)
+   3. USER_ROLE - join table linking users to all their roles.
+4. Create a new go-backend with the following rest api endpoints
+   1. =POST /login= (authenticate a user with username/password - and return jwt token - with roles)
+   2. =POST /user= (create a user and return their user id)
+   3. =PUT  /user/<email>= (update the user with the specified email and return their id)
+   4. =PUT  /user/role/<role_name>= (add the role to the user if it does not exist)
+   5. =GET /user/<email>= (return a user object with their email and all their roles)
+5. Apart from the =/login= endpoint, all endpoints should require authentication with jwt
+6. All the above methods except the =GET /user/<email>= should only be possible if the user has admin role.
+7. The =GET /user/<email>= should only allow the current user (based on the JWT)
+8. Add tests for all the above methods.
+*** Week 4 Objectives
+**** Integrate frontend with backend.
+1. Learn MUI
+2. Create a from scratch react application - with a login page.
+3. If the user successfuly logs in - take them to a user profile page with their role details (calling =GET /user/<email>=)
+4. If the user fails to login - show an error message.
+
 
